--- a/wiki/iznotia/index.html
+++ b/wiki/iznotia/index.html
@@ -3,16 +3,16 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Iznotia - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Iznotia">
-<meta name="twitter:title" content="Iznotia">
-<meta name="description" content="Iznotia, Iznotiańska Republika Demokratyczna (niem. Iznotia, Isnotische Demokratische Republik).">
-<meta property="og:description" content="Iznotia, Iznotiańska Republika Demokratyczna (niem. Iznotia, Isnotische Demokratische Republik).">
-<meta name="twitter:description" content="Iznotia, Iznotiańska Republika Demokratyczna (niem. Iznotia, Isnotische Demokratische Republik).">
-<meta property="og:image" content="https://i.ibb.co/7JpBJm1/iznotia.png">
-<meta name="twitter:image" content="https://i.ibb.co/7JpBJm1/iznotia.png">
-<meta property="og:image:width" content="3544">
-<meta property="og:image:height" content="2127">
+<title>Kürzer - Fangea i inne kontynenty</title>
+<meta property="og:title" content="Kürzer">
+<meta name="twitter:title" content="Kürzer">
+<meta name="description" content="Kürzer  –  założona w 2005 roku przez Josepha von Kuele iznotiańska sieć sklepów dyskont, należąca do sieci sklepów Cartland. Po upływie 9 lat od rozpoczęcia działalności 740 sklepów Kürzer funkcjonowało w Iznotii jako lokalni dystrybutorzy. Pod koniec 2016 roku Kürzer rozpoczął działalność zagraniczną. W latach 2016 oraz 2017 Kürzer pojawił w Najbielańsku oraz Lemburgu. W 2022 r. dysponował ponad">
+<meta property="og:description" content="Kürzer  –  założona w 2005 roku przez Josepha von Kuele iznotiańska sieć sklepów dyskont, należąca do sieci sklepów Cartland. Po upływie 9 lat od rozpoczęcia działalności 740 sklepów Kürzer funkcjonowało w Iznotii jako lokalni dystrybutorzy. Pod koniec 2016 roku Kürzer rozpoczął działalność zagraniczną. W latach 2016 oraz 2017 Kürzer pojawił w Najbielańsku oraz Lemburgu. W 2022 r. dysponował ponad">
+<meta name="twitter:description" content="Kürzer  –  założona w 2005 roku przez Josepha von Kuele iznotiańska sieć sklepów dyskont, należąca do sieci sklepów Cartland. Po upływie 9 lat od rozpoczęcia działalności 740 sklepów Kürzer funkcjonowało w Iznotii jako lokalni dystrybutorzy. Pod koniec 2016 roku Kürzer rozpoczął działalność zagraniczną. W latach 2016 oraz 2017 Kürzer pojawił w Najbielańsku oraz Lemburgu. W 2022 r. dysponował ponad">
+<meta property="og:image" content="https://i.ibb.co/yBcKLyt/kurzerlogo.png">
+<meta name="twitter:image" content="https://i.ibb.co/yBcKLyt/kurzerlogo.png">
+<meta property="og:image:width" content="640">
+<meta property="og:image:height" content="641">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -28,22 +28,64 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Iznotia</div><span>11.10.2024</span></header>
-<div class="uncomplete"></div>
-<table class="infobox"><caption>Iznotiańska Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Isnotische Demokratische Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/7JpBJm1/iznotia.png" data-description="Flaga Iznotii"></td><td><img src="https://i.ibb.co/SmK1RfG/godlo-iznotii.png" data-description="Godło Iznotii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_iznotii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_iznotii/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_iznotii/"><i>Auferstanden aus Ruinen</i></a><br>(<i>Powstając z ruin</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> </td></tr></tbody></table>
+<header><div>Kürzer</div><span>02.01.2025</span></header>
+<table class="infobox"><caption>Kürzer</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/yBcKLyt/kurzerlogo.png" data-description="Logo"> </td></tr><tr><td colspan="2"> <img src="https://i.ibb.co/SmGx5gc/kurzerpregola.png" data-description="Sklep sieci Kürzer w Pregole"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci Kürzer w <a href="https://grumqy.github.io/fangea/wiki/pregoła/">Pregole</a>, Iznotia </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/7JpBJm1/iznotia.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/derecht/">Derecht</a> </td></tr><tr><th>Udziałowcy</th><td> <a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland </a></td></tr><tr><th>Data założenia</th><td> 9 stycznia 2005 </td></tr><tr><th>Prezes</th><td><a href="https://grumqy.github.io/fangea/wiki/joseph_von_kuele/">Joseph von Kuele </a></td></tr></tbody></table>
 
-<p><b>Iznotia</b>, <b>Iznotiańska Republika Demokratyczna</b> (niem. <i>Iznotia</i>, Isnotische Demokratische Republik).</p>
- <div id="source-code" style="display:none;">{|infobox Iznotiańska Republika Demokratyczna
-!t=cc=2 ''Isnotische Demokratische Republik'' !
-|{ibox
-|[[timg:https://i.ibb.co/7JpBJm1/iznotia.png|Flaga Iznotii]] || [[timg:https://i.ibb.co/SmK1RfG/godlo-iznotii.png|Godło Iznotii]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_iznotii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_iznotii/)[Godło] |
-}|
-|t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_iznotii/)[''Auferstanden aus Ruinen'']<br>(''Powstając z ruin'') |
-|t=cc=2 <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> |
+<p><b>Kürzer </b> –  założona w 2005 roku przez <a href="https://grumqy.github.io/fangea/wiki/joseph_von_kuele/">Josepha von Kuele</a> iznotiańska sieć sklepów dyskont, należąca do sieci sklepów <a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland</a>.</p>
+
+<h1>Historia</h1>
+<p>Po upływie 9 lat od rozpoczęcia działalności 740 sklepów Kürzer funkcjonowało w Iznotii jako lokalni dystrybutorzy. Pod koniec 2016 roku Kürzer rozpoczął działalność zagraniczną. W latach 2016 oraz 2017 Kürzer pojawił w Najbielańsku oraz Lemburgu. W 2022 r. dysponował ponad 3,2 tys. sklepów w 5 krajach.</p>
+
+<p>W roku 2019 w Iznotii zatrudnionych było 45 tysięcy osób, a na całym świecie 150 tysięcy. W 2024 r. zatrudnienie globalne wyniosło 220 tys. osób.</p>
+
+<h1>Działalność</h1>
+<p>Sklepy Kürzer funkcjonują w 5 krajach: <a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a>, <a href="https://grumqy.github.io/fangea/wiki/najbielańsk/">Najbielańsk</a>, <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a>, <a href="https://grumqy.github.io/fangea/wiki/fankladonia/">Fankladonia</a>, <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a> (stan na listopad 2024 r.)</p>
+
+<p>W 2024 r. Kürzer posiadał ponad 3 500 sklepów.</p>
+
+<h1>Kontrowersje</h1>
+<p>W 2017 roku sieć dyskontów Kürzer znalazła się w centrum kontrowersji związanych z warunkami pracy w swoich centrach dystrybucyjnych na terenie Iznotii. Według doniesień niezależnych mediów, w magazynach firmy dochodziło do łamania praw pracowniczych, takich jak zmuszanie zatrudnionych do pracy w nadgodzinach bez odpowiedniego wynagrodzenia oraz niewłaściwe traktowanie przez kadrę zarządzającą.</p>
+
+<p>Raport ujawnił również przypadki stosowania monitoringu pracowników w sposób inwazyjny, co wzbudziło sprzeciw organizacji zajmujących się ochroną prywatności. Dodatkowo, w tym samym roku na jaw wyszły informacje o presji wywieranej na pracowników, by realizowali nierealistycznie wysokie normy wydajności, co prowadziło do licznych zwolnień z powodu rzekomego „niespełniania standardów”.</p>
+
+<p>Prezes firmy, Joseph von Kuele, w publicznych wypowiedziach początkowo zaprzeczał wszelkim zarzutom, nazywając je „bezpodstawnymi oskarżeniami mającymi na celu podważenie reputacji firmy”. Jednak w obliczu rosnącego nacisku opinii publicznej, Kürzer przeprowadził wewnętrzny audyt i ogłosił plan poprawy warunków pracy, w tym zwiększenie transparentności procesów zarządzania oraz wdrożenie nowych zasad dotyczących ochrony praw pracowników.</p>
+
+<p>Pomimo tych działań, krytyka wobec firmy pozostaje istotnym elementem debaty publicznej w Iznotii, a organizacje społeczne nadal monitorują działania firmy Kürzer  pod kątem ich zgodności z przyjętymi standardami etycznymi.</p>
+ <div id="source-code" style="display:none;">{|infobox Kürzer
+|c=2 [[timg:https://i.ibb.co/yBcKLyt/kurzerlogo.png|Logo]] |
+
+|c=2 [[timg:https://i.ibb.co/SmGx5gc/kurzerpregola.png|Sklep sieci Kürzer w Pregole]] |
+|t=cc=2 Sklep sieci Kürzer w (https://grumqy.github.io/fangea/wiki/pregoła/)[Pregole], Iznotia |
+! Państwo !| [[icon:https://i.ibb.co/7JpBJm1/iznotia.png|small]] (https://grumqy.github.io/fangea/wiki/iznotia/)[Iznotia] |
+! Siedziba !| (https://grumqy.github.io/fangea/wiki/derecht/)[Derecht] |
+! Udziałowcy !| (https://grumqy.github.io/fangea/wiki/cartland/)[Cartland ]|
+! Data założenia !| 9 stycznia 2005 |
+! Prezes !|(https://grumqy.github.io/fangea/wiki/joseph_von_kuele/)[Joseph von Kuele ]|
+
 |}
 
-'''Iznotia''', '''Iznotiańska Republika Demokratyczna''' (niem. ''Iznotia'', Isnotische Demokratische Republik).</div>
+'''Kürzer ''' –  założona w 2005 roku przez (https://grumqy.github.io/fangea/wiki/joseph_von_kuele/)[Josepha von Kuele] iznotiańska sieć sklepów dyskont, należąca do sieci sklepów (https://grumqy.github.io/fangea/wiki/cartland/)[Cartland].
+
+= Historia =
+
+Po upływie 9 lat od rozpoczęcia działalności 740 sklepów Kürzer funkcjonowało w Iznotii jako lokalni dystrybutorzy. Pod koniec 2016 roku Kürzer rozpoczął działalność zagraniczną. W latach 2016 oraz 2017 Kürzer pojawił w Najbielańsku oraz Lemburgu. W 2022 r. dysponował ponad 3,2 tys. sklepów w 5 krajach.
+
+W roku 2019 w Iznotii zatrudnionych było 45 tysięcy osób, a na całym świecie 150 tysięcy. W 2024 r. zatrudnienie globalne wyniosło 220 tys. osób.
+
+= Działalność =
+Sklepy Kürzer funkcjonują w 5 krajach: (https://grumqy.github.io/fangea/wiki/iznotia/)[Iznotia], (https://grumqy.github.io/fangea/wiki/najbielańsk/)[Najbielańsk], (https://grumqy.github.io/fangea/wiki/lemburg/)[Lemburg], (https://grumqy.github.io/fangea/wiki/fankladonia/)[Fankladonia], (https://grumqy.github.io/fangea/wiki/montecydia/)[Montecydia] (stan na listopad 2024 r.)
+
+W 2024 r. Kürzer posiadał ponad 3 500 sklepów.
+
+= Kontrowersje =
+
+W 2017 roku sieć dyskontów Kürzer znalazła się w centrum kontrowersji związanych z warunkami pracy w swoich centrach dystrybucyjnych na terenie Iznotii. Według doniesień niezależnych mediów, w magazynach firmy dochodziło do łamania praw pracowniczych, takich jak zmuszanie zatrudnionych do pracy w nadgodzinach bez odpowiedniego wynagrodzenia oraz niewłaściwe traktowanie przez kadrę zarządzającą.
+
+Raport ujawnił również przypadki stosowania monitoringu pracowników w sposób inwazyjny, co wzbudziło sprzeciw organizacji zajmujących się ochroną prywatności. Dodatkowo, w tym samym roku na jaw wyszły informacje o presji wywieranej na pracowników, by realizowali nierealistycznie wysokie normy wydajności, co prowadziło do licznych zwolnień z powodu rzekomego „niespełniania standardów”.
+
+Prezes firmy, Joseph von Kuele, w publicznych wypowiedziach początkowo zaprzeczał wszelkim zarzutom, nazywając je „bezpodstawnymi oskarżeniami mającymi na celu podważenie reputacji firmy”. Jednak w obliczu rosnącego nacisku opinii publicznej, Kürzer przeprowadził wewnętrzny audyt i ogłosił plan poprawy warunków pracy, w tym zwiększenie transparentności procesów zarządzania oraz wdrożenie nowych zasad dotyczących ochrony praw pracowników.
+
+Pomimo tych działań, krytyka wobec firmy pozostaje istotnym elementem debaty publicznej w Iznotii, a organizacje społeczne nadal monitorują działania firmy Kürzer  pod kątem ich zgodności z przyjętymi standardami etycznymi.</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
