--- a/wiki/iznotia/index.html
+++ b/wiki/iznotia/index.html
@@ -16,11 +16,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	@@ -28,22 +28,64 @@ <h1>Spis Treści</h1>
+<link rel="stylesheet" href="/fangea/style.css" />
+<script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
+</head>
+<body>
+<header id="pageheader">
+</header>
+<main>
+<nav>
+<h1>Spis Treści</h1>
 <ul></ul>
 </nav>
 <article>
-<header><div>Iznotia</div><span>11.10.2024</span></header>
+<header><div>Iznotia</div><span>02.01.2025</span></header>
 <div class="uncomplete"></div>
 <table class="infobox"><caption>Iznotiańska Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Isnotische Demokratische Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/7JpBJm1/iznotia.png" data-description="Flaga Iznotii"></td><td><img src="https://i.ibb.co/SmK1RfG/godlo-iznotii.png" data-description="Godło Iznotii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_iznotii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_iznotii/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_iznotii/"><i>Auferstanden aus Ruinen</i></a><br>(<i>Powstając z ruin</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> </td></tr></tbody></table>
 
@@ -35,7 +43,11 @@
 |t=cc=2 <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> |
 |}
 
-'''Iznotia''', '''Iznotiańska Republika Demokratyczna''' (niem. ''Iznotia'', Isnotische Demokratische Republik).</div>
+'''Iznotia''', '''Iznotiańska Republika Demokratyczna''' (niem. ''Iznotia'', Isnotische Demokratische Republik).</div></div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
+<script src="/fangea/article.js"></script>
+
+</body>
+</html>
