--- a/wiki/lendawia_północna/index.html
+++ b/wiki/lendawia_północna/index.html
@@ -30,14 +30,14 @@
 <article>
 <header><div>Lendawia Północna</div><span>03.01.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Lendawska Republika Ludowo-Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Lendavska Ljudsko-Demokratična Republika</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/ypLDmYY/polnocna-lendawia-flaga.png" data-description="Flaga Lendawii Północnej"></td><td><img src="https://i.ibb.co/tx1wRdt/polnocna-lendawia.png" data-description="Herb Lendawii Północnej"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_liwonii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_liwonii/">Herb</a> </td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>Lendawska Republika Ludowo-Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Lendavska Ljudsko-Demokratična Republika</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/ypLDmYY/polnocna-lendawia-flaga.png" data-description="Flaga Lendawii Północnej"></td><td><img src="https://i.ibb.co/tx1wRdt/polnocna-lendawia.png" data-description="Herb Lendawii Północnej"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_lendawii_północnej/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_lendawii_północnej/">Herb</a> </td></tr></tbody></table></td></tr></tbody></table>
 
 <p><b>Lendawia Północna</b>, oficjalna nazwa <b>Lendawska Republika Ludowo-Demokratyczna</b> (wł. <i>Lendavija Severna</i>, Lendavska Ljudsko-Demokratična Republika).</p>
  <div id="source-code" style="display:none;">{|infobox Lendawska Republika Ludowo-Demokratyczna
 !t=cc=2 ''Lendavska Ljudsko-Demokratična Republika'' !
 |{ibox
 |[[timg:https://i.ibb.co/ypLDmYY/polnocna-lendawia-flaga.png|Flaga Lendawii Północnej]] || [[timg:https://i.ibb.co/tx1wRdt/polnocna-lendawia.png|Herb Lendawii Północnej]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_liwonii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_liwonii/)[Herb] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_lendawii_północnej/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_lendawii_północnej/)[Herb] |
 }|
 |}
 
