--- a/wiki/lendawia_północna/index.html
+++ b/wiki/lendawia_północna/index.html
@@ -6,9 +6,9 @@
 <title>Lendawia Północna - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Lendawia Północna">
 <meta name="twitter:title" content="Lendawia Północna">
-<meta name="description" content="Lendawia Północna, oficjalna nazwa Lendawska Republika Ludowo-Demokratyczna (wł. Lendavija Severna, Lendavska Ljudsko-Demokratična Republika).">
-<meta property="og:description" content="Lendawia Północna, oficjalna nazwa Lendawska Republika Ludowo-Demokratyczna (wł. Lendavija Severna, Lendavska Ljudsko-Demokratična Republika).">
-<meta name="twitter:description" content="Lendawia Północna, oficjalna nazwa Lendawska Republika Ludowo-Demokratyczna (wł. Lendavija Severna, Lendavska Ljudsko-Demokratična Republika).">
+<meta name="description" content="Lendawia Północna, oficjalna nazwa Lendawska Republika Ludowo-Demokratyczna (słoweń. Lendavija Severna, Lendavska Ljudsko-Demokratična Republika).">
+<meta property="og:description" content="Lendawia Północna, oficjalna nazwa Lendawska Republika Ludowo-Demokratyczna (słoweń. Lendavija Severna, Lendavska Ljudsko-Demokratična Republika).">
+<meta name="twitter:description" content="Lendawia Północna, oficjalna nazwa Lendawska Republika Ludowo-Demokratyczna (słoweń. Lendavija Severna, Lendavska Ljudsko-Demokratična Republika).">
 <meta property="og:image" content="https://i.ibb.co/ypLDmYY/polnocna-lendawia-flaga.png">
 <meta name="twitter:image" content="https://i.ibb.co/ypLDmYY/polnocna-lendawia-flaga.png">
 <meta property="og:image:width" content="5369">
@@ -32,7 +32,7 @@
 <div class="uncomplete"></div>
 <table class="infobox"><caption>Lendawska Republika Ludowo-Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Lendavska Ljudsko-Demokratična Republika</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/ypLDmYY/polnocna-lendawia-flaga.png" data-description="Flaga Lendawii Północnej"></td><td><img src="https://i.ibb.co/tx1wRdt/polnocna-lendawia.png" data-description="Herb Lendawii Północnej"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_lendawii_północnej/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_lendawii_północnej/">Herb</a> </td></tr></tbody></table></td></tr></tbody></table>
 
-<p><b>Lendawia Północna</b>, oficjalna nazwa <b>Lendawska Republika Ludowo-Demokratyczna</b> (wł. <i>Lendavija Severna</i>, Lendavska Ljudsko-Demokratična Republika).</p>
+<p><b>Lendawia Północna</b>, oficjalna nazwa <b>Lendawska Republika Ludowo-Demokratyczna</b> (słoweń. <i>Lendavija Severna</i>, Lendavska Ljudsko-Demokratična Republika).</p>
  <div id="source-code" style="display:none;">{|infobox Lendawska Republika Ludowo-Demokratyczna
 !t=cc=2 ''Lendavska Ljudsko-Demokratična Republika'' !
 |{ibox
@@ -41,7 +41,7 @@
 }|
 |}
 
-'''Lendawia Północna''', oficjalna nazwa '''Lendawska Republika Ludowo-Demokratyczna''' (wł. ''Lendavija Severna'', Lendavska Ljudsko-Demokratična Republika).</div>
+'''Lendawia Północna''', oficjalna nazwa '''Lendawska Republika Ludowo-Demokratyczna''' (słoweń. ''Lendavija Severna'', Lendavska Ljudsko-Demokratična Republika).</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
