--- a/wiki/ebengrad/index.html
+++ b/wiki/ebengrad/index.html
@@ -30,15 +30,15 @@
 <article>
 <header><div>Ebengrad</div><span>08.09.2024</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Republika Ebengradu</caption><tbody><tr><th style="text-align: center;" colspan="2"> Республика Эбенграда</th></tr><tr><th style="text-align: center;" colspan="2"> <i>Respublika Ebengrada</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/HdXSyh4/ebengrad.webp" data-description="Flaga Ebengradu"></td><td><img src="https://i.ibb.co/pxHr6q9/ebengrad-godlo.webp" data-description="Godło Ebengradu"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_ebengradu/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_ebengradu/">Godło</a> </td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>Republika Ebengradu</caption><tbody><tr><th style="text-align: center;" colspan="2"> Республика Эбенграда</th></tr><tr><th style="text-align: center;" colspan="2"> <i>Respublika Ebengrada</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/HdXSyh4/ebengrad.webp" data-description="Flaga Ebengradu"></td><td><img src="https://i.ibb.co/pxHr6q9/ebengrad-godlo.webp" data-description="Herb Ebengradu"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_ebengradu/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_ebengradu/">Herb</a> </td></tr></tbody></table></td></tr></tbody></table>
 
 <p><b>Ebengrad</b>, <b>Republika Ebengradu</b> (ros. Эбенград, Ebengrad, ros. Республика Эбенграда, Respublika Ebengrada)</p>
  <div id="source-code" style="display:none;">{|infobox Republika Ebengradu
 !t=cc=2 Республика Эбенграда !
 !t=cc=2 ''Respublika Ebengrada'' !
 |{ibox
-|[[timg:https://i.ibb.co/HdXSyh4/ebengrad.webp|Flaga Ebengradu]] || [[timg:https://i.ibb.co/pxHr6q9/ebengrad-godlo.webp|Godło Ebengradu]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_ebengradu/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_ebengradu/)[Godło] |
+|[[timg:https://i.ibb.co/HdXSyh4/ebengrad.webp|Flaga Ebengradu]] || [[timg:https://i.ibb.co/pxHr6q9/ebengrad-godlo.webp|Herb Ebengradu]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_ebengradu/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_ebengradu/)[Herb] |
 }|
 |}
 
