--- a/wiki/atidalia/index.html
+++ b/wiki/atidalia/index.html
@@ -30,14 +30,14 @@
 <article>
 <header><div>Atidalia</div><span>08.09.2024</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>V Republika Atidalii</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>V. republika Atidalie</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/FDfyPy0/atidalia-flaga.webphttps://i.ibb.co/C5w0kBM/atidalia.webp" data-description="Flaga Atidalii"></td><td><img src="https://i.ibb.co/C5w0kBM/atidalia.webp" data-description="Godło Atidalii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_atidalii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_atidalii/">Godło</a> </td></tr></tbody></table></td></tr></tbody></table>
+<table class="infobox"><caption>V Republika Atidalii</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>V. republika Atidalie</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/FDfyPy0/atidalia-flaga.webphttps://i.ibb.co/C5w0kBM/atidalia.webp" data-description="Flaga Atidalii"></td><td><img src="https://i.ibb.co/C5w0kBM/atidalia.webp" data-description="Herb Atidalii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_atidalii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_atidalii/">Herb</a> </td></tr></tbody></table></td></tr></tbody></table>
 
 <p><b>Atidalia</b>, <b>V Republika Atidalii</b> (cz. <i>Atidalie</i>, V. republika Atidalie).</p>
  <div id="source-code" style="display:none;">{|infobox V Republika Atidalii
 !t=cc=2 ''V. republika Atidalie'' !
 |{ibox
-|[[timg:https://i.ibb.co/FDfyPy0/atidalia-flaga.webphttps://i.ibb.co/C5w0kBM/atidalia.webp|Flaga Atidalii]] || [[timg:https://i.ibb.co/C5w0kBM/atidalia.webp|Godło Atidalii]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_atidalii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_atidalii/)[Godło] |
+|[[timg:https://i.ibb.co/FDfyPy0/atidalia-flaga.webphttps://i.ibb.co/C5w0kBM/atidalia.webp|Flaga Atidalii]] || [[timg:https://i.ibb.co/C5w0kBM/atidalia.webp|Herb Atidalii]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_atidalii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_atidalii/)[Herb] |
 }|
 |}
 
