--- a/wiki/index.html
+++ b/wiki/index.html
@@ -51,14 +51,18 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/halandia/">Halandia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/martylia/">Martylia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/nadmrocze/">Nadmrocze</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">Nowy Tuhalf</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">Stany Zjednoczone</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/lendawia_północna/">Lendawia Północna</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/lendawia_południowa/">Lendawia Południowa</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/taj-hoi/">Taj-Hoi</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/teran/">Teran</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/wizgard/">Wizgard</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Postacie</h1>
