--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <div style="background-image: url(https://i.ibb.co/6YFHZzv/obraz-2024-06-01-224508188.png); background-size: cover; background-position: center; background-repeat: no-repeat; width: 500px; height: 310px; border-radius: 1rem; position: absolute; bottom: -50px; left: -150px; opacity: 0.25; z-index: -1; filter: blur(2px);"></div>
                     <h1 style="text-align: right; margin: 0;">Dołącz do nas na Discord!</h1>
                     <p style="text-align: right; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Dołącz do społeczności członków naszego RP</p>
-                    <a style="float: right;" href="https://discord.gg/hUjMqnKsJU" class="button-href discord"><i class="fa-brands fa-discord"></i>Serwer Discord</a>
+                    <a style="float: right;" href="https://discord.gg/zGnAHs6JRv" class="button-href discord"><i class="fa-brands fa-discord"></i>Serwer Discord</a>
                 </div>
 
             </div>
