--- a/wiki/index.html
+++ b/wiki/index.html
@@ -48,6 +48,7 @@
                 <h1>Państwa</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/atidalia/">Atidalia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/ebengrad/">Ebengrad</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/fankladonia/">Fankladonia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/halandia/">Halandia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/martylia/">Martylia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
