--- a/wiki/index.html
+++ b/wiki/index.html
@@ -66,6 +66,10 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/wizgard/">Wizgard</a></li>
             </ul> 
             <ul class="article-category">
+                <h1>Miasta</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławieck</a></li>
+            </ul> 
+            <ul class="article-category">
                 <h1>Postacie</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/neku/">Neku</a></li>
             </ul> 
