--- a/wiki/index.html
+++ b/wiki/index.html
@@ -98,7 +98,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
-                <li><a href="https://grumqy.github.io/fangea/wiki/województw0_pomerańskie/">Województwo pomerańskie</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Województwo pomerańskie</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/farnet/">FARNET</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">Epsilon 3.1</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">Pameryjskie tablice rejestracyjne</a></li>
