--- a/wiki/index.html
+++ b/wiki/index.html
@@ -83,6 +83,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/mmt_transport/">MMT Transport</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/kürzer/">Kürzer</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/paywall/">PayWall</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/van_kirk/">Van Kirk</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Konflikty Zbrojne</h1>
