--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
                 <div class="article-tile-description">Atidalia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
+        <a href="https://grumqy.github.io/fangea/wiki/van_kirk/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Powstanie Ekwalijskie (1879-1882) – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</span></div>
-                    <img src="https://i.ibb.co/7JHp6Wh/zd.png">
+                    <div class="article-tile-text"><span>Van Kirk (do 1911r. znane jako Vincent Van Kirk Mercantile) – sudfangejskie przedsiębiorstwo handlu detalicznego założone formalnie 11 kwietnia 1898 roku, jednak za symboliczną datę uznaje się 15 maja 1911 roku, gdy przedsiębiorstwo założone przez Vince'a Van Kirka rozpoczęło handel z lokalnymi sklepami w mieście Victoria. Od 1911 do 1936 roku przedsiębiorstwo Vincenta Van Kirka było największą hurtownią wielobranżową w miastach Victoria i Olympus.</span></div>
+                    <img src="https://i.ibb.co/m4SYwVn/image.png">
                 </div>
-                <div class="article-tile-description">Powstanie Ekwalijskie</div>
+                <div class="article-tile-description">Van Kirk</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/greenpay/">
