--- a/wiki/index.html
+++ b/wiki/index.html
@@ -99,6 +99,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/the_grimscape/">The Grimscape</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Województwo pomerańskie</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/farnet/">FARNET</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">Epsilon 3.1</a></li>
