--- a/mapa/index.html
+++ b/mapa/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
@@ -18,33 +18,6 @@
         rel="stylesheet">
   <link rel="stylesheet" href="/fangea/style.css" />
   <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-
-    #map {
-      margin-top: 80px;
-      height: calc(100vh - 80px);
-      background-color: #98C6DA;
-      position: relative;
-      z-index: 1;
-    }
-
-    .leaflet-control-attribution {
-      display: none;
-    }
-
-    #back-button {
-  position: absolute;
-  bottom: -75px;
-  right: 10px;
-  background-color: transparent;
-  z-index: 2;
-}
-  </style>
 </head>
 
 <body>
@@ -52,68 +25,6 @@
   </header>
   <div id="map"></div>
 <script src="../pageheader.js"></script>
-  <script>
-    var map = L.map('map', {
-      crs: L.CRS.Simple,
-      zoomSnap: 0.01,
-      minZoom: -Infinity,
-      maxZoom: 10
-    });
-
-    var initialBounds = L.latLngBounds(map.unproject([0, 165168000000 / 500], 8), map.unproject([148512000000 / 500, 0], 8));
-    var svgMap = L.imageOverlay('/fangea/local/fangea_mapa.svg', initialBounds).addTo(map);
-
-    map.fitBounds(initialBounds);
-
-    var drawnItems = new L.FeatureGroup();
-    map.addLayer(drawnItems);
-
-    var drawControl = new L.Control.Draw({
-      draw: {
-        polyline: {
-          shapeOptions: {
-            color: 'red',
-            opacity: 0.6,
-            weight: 5,
-            clickable: false
-          }
-        },
-        polygon: {
-          showArea: true,
-          shapeOptions: {
-            color: 'red',
-            opacity: 0.6,
-            weight: 3,
-            clickable: false
-          }
-        },
-        rectangle: false,
-        circle: false,
-      },
-      edit: {
-        featureGroup: drawnItems
-      },
-      position: 'topright'
-    });
-
-    map.addControl(drawControl);
-
-    map.on(L.Draw.Event.CREATED, function (e) {
-      var layer = e.layer;
-      drawnItems.addLayer(layer);
-    });
-
-    map.on('zoom', function () {
-    });
-
-    map.on('drag', function () {
-    });
-
-    window.addEventListener('keydown', function (event) {
-      if (event.key === 'ArrowUp') {
-        map.setZoom(map.getZoom() - 1);
-      }
-    });
-  </script>
+<div id="mobile-device-message">Podstrona mapy jest obecnie niedostępna</div>
 </body>
 </html>
