--- a/mapa/index.html
+++ b/mapa/index.html
@@ -18,40 +18,6 @@
         rel="stylesheet">
   <link rel="stylesheet" href="/fangea/style.css" />
   <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-    }
-
-    #map {
-      height: 100vh;
-    }
-
-    #mobile-device-message {
-      display: none; 
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex; 
-      align-items: center; 
-      justify-content: center; 
-      background-color: rgba(0, 0, 0, 0.7); 
-      color: white; 
-      font-size: 1.5rem;
-      text-align: center;
-      z-index: 9999; 
-    }
-
-    @media (max-width: 768px) {
-      #mobile-device-message {
-        display: flex; 
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -59,7 +25,7 @@
   </header>
   <div id="map"></div>
   <script src="../pageheader.js"></script>
-  <div id="mobile-device-message">Podstrona mapy jest obecnie niedostępna</div>
+  <div>Podstrona mapy jest obecnie niedostępna</div>
 </body>
 
 </html>
