--- a/mapa/index.html
+++ b/mapa/index.html
@@ -18,6 +18,16 @@
         rel="stylesheet">
   <link rel="stylesheet" href="/fangea/style.css" />
   <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
+  <style>
+    #map + div {
+      font-weight: bold;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+  </style>
 </head>
 
 <body>
