--- a/mapa/index.html
+++ b/mapa/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="/fangea/style.css" />
   <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
   <style>
-    #map + div {
+    .centered-text {
       font-weight: bold;
       text-align: center;
       display: flex;
@@ -35,7 +35,7 @@
   </header>
   <div id="map"></div>
   <script src="../pageheader.js"></script>
-  <div>Podstrona mapy jest obecnie niedostępna</div>
+  <div class="centered-text">Podstrona mapy jest obecnie niedostępna</div>
 </body>
 
 </html>
