--- a/mapa/index.html
+++ b/mapa/index.html
@@ -28,6 +28,15 @@
       height: 100vh;
       font-size: 2rem; 
     }
+     .bottom-text {
+      font-weight: normal;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      font-size: 1rem; 
+    }
   </style>
 </head>
 
@@ -37,6 +46,7 @@
   <div id="map"></div>
   <script src="../pageheader.js"></script>
   <div class="centered-text">Podstrona mapy jest obecnie niedostępna</div>
+  <div class="bottom-text">Mapa świata jest obecnie w trakcie przebudowy i zostanie niedługo opublikowana</div>
 </body>
 
 </html>
