--- a/mapa/index.html
+++ b/mapa/index.html
@@ -19,24 +19,27 @@
   <link rel="stylesheet" href="/fangea/style.css" />
   <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
   <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+    }
+
     .centered-text {
       font-weight: bold;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-size: 2rem; 
+      font-size: 2rem;
+      margin: 0.5rem 0;
     }
-     .bottom-text {
+
+    .bottom-text {
       font-weight: normal;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-size: 1rem; 
-      margin-top: -1000px;
+      font-size: 1.2rem;
+      margin: 0.5rem 0;
     }
   </style>
 </head>
