--- a/wiki/lipławieck/index.html
+++ b/wiki/lipławieck/index.html
@@ -9,10 +9,10 @@
 <meta name="description" content="Lipławieck, miasto stołeczne Lipławieck (m.st. Lipławieck) – stolica Pamercji i województwa pomerańskiego, najludniejsze miasto w kraju i drugie (po Dobrogrodzie) pod względem powierzchni, położone nad Morzem Mrocznym u ujścia Ostrej.">
 <meta property="og:description" content="Lipławieck, miasto stołeczne Lipławieck (m.st. Lipławieck) – stolica Pamercji i województwa pomerańskiego, najludniejsze miasto w kraju i drugie (po Dobrogrodzie) pod względem powierzchni, położone nad Morzem Mrocznym u ujścia Ostrej.">
 <meta name="twitter:description" content="Lipławieck, miasto stołeczne Lipławieck (m.st. Lipławieck) – stolica Pamercji i województwa pomerańskiego, najludniejsze miasto w kraju i drugie (po Dobrogrodzie) pod względem powierzchni, położone nad Morzem Mrocznym u ujścia Ostrej.">
-<meta property="og:image" content="https://i.ibb.co/cNgfnb1/liplawieck-flaga.png">
-<meta name="twitter:image" content="https://i.ibb.co/cNgfnb1/liplawieck-flaga.png">
-<meta property="og:image:width" content="4183">
-<meta property="og:image:height" content="2548">
+<meta property="og:image" content="https://i.ibb.co/8Btzf5c/Zrzut-ekranu-2025-01-19-031645.png">
+<meta name="twitter:image" content="https://i.ibb.co/8Btzf5c/Zrzut-ekranu-2025-01-19-031645.png">
+<meta property="og:image:width" content="1919">
+<meta property="og:image:height" content="1079">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -28,16 +28,18 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Lipławieck</div><span>18.01.2025</span></header>
-<div class="uncomplete"></div>
+<header><div>Lipławieck</div><span>25.01.2025</span></header>
 
-<table class="infobox"><caption>Lipławieck</caption><tbody><tr><th style="text-align: center;" colspan="2"> <a href="https://grumqy.github.io/fangea/wiki/miasta_w_pamercji/">miasto</a> na <a href="https://pl.wikipedia.org/wiki/Miasto_na_prawach_powiatu">prawach powiatu</a></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/cNgfnb1/liplawieck-flaga.png" data-description="Flaga miasta Lipławieck"></td><td style="text-align: center;"> <img src="https://i.ibb.co/KW61VMV/liplawieck-herb.png" data-description="Herb miasta Lipławieck" width="60%"> </td></tr><tr><td style="text-align: center;"> Flaga</td><td style="text-align: center;"> Herb </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/b5jD2sG/liplawieck-logo.png" data-description="Znak promocyjny miasta Lipławieck" width="40%"> </td></tr><tr><td style="text-align: center;" colspan="2"> Znak promocyjny</td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Województwo</th><td> <img src="https://i.ibb.co/QkrM4pX/pomeranskie.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Pomerańskie</a> </td></tr></tbody></table>
+
+<table class="infobox"><caption>Lipławieck</caption><tbody><tr><th style="text-align: center;" colspan="2"> <a href="https://grumqy.github.io/fangea/wiki/miasta_w_pamercji/">miasto</a> na <a href="https://pl.wikipedia.org/wiki/Miasto_na_prawach_powiatu">prawach powiatu</a></th></tr><tr><td><img src="https://i.ibb.co/8Btzf5c/Zrzut-ekranu-2025-01-19-031645.png" data-description="Pałac Węgorzyńskich"></td><td><img src="https://i.ibb.co/vwc2r4G/Zrzut-ekranu-2025-01-25-233643.png" data-description="Stadion Narodowy"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/pałac_węgorzyńskich_w_lipławiecku/">Pałac Węgorzyńskich</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/stadion_narodowy_w_lipławiecku/">Stadion Narodowy</a> </td></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/cNgfnb1/liplawieck-flaga.png" data-description="Flaga miasta Lipławieck"></td><td style="text-align: center;"> <img src="https://i.ibb.co/KW61VMV/liplawieck-herb.png" data-description="Herb miasta Lipławieck" width="60%"> </td></tr><tr><td style="text-align: center;"> Flaga</td><td style="text-align: center;"> Herb </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/b5jD2sG/liplawieck-logo.png" data-description="Znak promocyjny miasta Lipławieck" width="40%"> </td></tr><tr><td style="text-align: center;" colspan="2"> Znak promocyjny</td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Województwo</th><td> <img src="https://i.ibb.co/QkrM4pX/pomeranskie.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Pomerańskie</a> </td></tr></tbody></table>
 
 <p><b>Lipławieck</b>, <b>miasto stołeczne Lipławieck</b> (m.st. Lipławieck) – stolica <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercji</a> i <a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">województwa pomerańskiego</a>, najludniejsze miasto w kraju i drugie (po <a href="https://grumqy.github.io/fangea/wiki/dobrogród/">Dobrogrodzie</a>) pod względem powierzchni, położone nad Morzem Mrocznym u ujścia Ostrej.</p>
  <div id="source-code" style="display:none;">
 
 {|infobox Lipławieck
 !t=cc=2 (https://grumqy.github.io/fangea/wiki/miasta_w_pamercji/)[miasto] na (https://pl.wikipedia.org/wiki/Miasto_na_prawach_powiatu)[prawach powiatu] !
+|[[timg:https://i.ibb.co/8Btzf5c/Zrzut-ekranu-2025-01-19-031645.png|Pałac Węgorzyńskich]] || [[timg:https://i.ibb.co/vwc2r4G/Zrzut-ekranu-2025-01-25-233643.png|Stadion Narodowy]] |
+|t=c (https://grumqy.github.io/fangea/wiki/pałac_węgorzyńskich_w_lipławiecku/)[Pałac Węgorzyńskich] ||t=c (https://grumqy.github.io/fangea/wiki/stadion_narodowy_w_lipławiecku/)[Stadion Narodowy] |
 |{ibox
 |t=c [[timg:https://i.ibb.co/cNgfnb1/liplawieck-flaga.png|Flaga miasta Lipławieck]] ||t=c [[timg:https://i.ibb.co/KW61VMV/liplawieck-herb.png|Herb miasta Lipławieck]] |
 |t=c Flaga ||t=c Herb |
