--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 <div class="article-tile-description">Kürzer</div>
             </div>
         </a>
-            <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
+            <a href="https://grumqy.github.io/fangea/wiki/lipławieck/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.</span></div>
-                    <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
+                    <div class="article-tile-text"><span>Lipławieck, miasto stołeczne Lipławieck (m.st. Lipławieck) – stolica Pamercji i województwa pomerańskiego, najludniejsze miasto w kraju i drugie (po Dobrogrodzie) pod względem powierzchni, położone nad Morzem Mrocznym u ujścia Ostrej.</span></div>
+                    <img src="https://i.ibb.co/8Btzf5c/Zrzut-ekranu-2025-01-19-031645.png">
                 </div>
-                <div class="article-tile-description">Montecydia</div>
+                <div class="article-tile-description">Lipławieck</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">
