--- a/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
+++ b/wiki/artykuł_dla_początkujacych_wolontariuszy/index.html
@@ -325,7 +325,7 @@
 <span style="font-size: 120%">Tekst o wielkości 120%</span>
 
 <h1>Eksportowanie artykułu</h1>
-<p>Jeżeli uważasz, że twój artykuł jest gotowy do dodania na stronę jeszcze raz upewnij się, że nie popełniłeś żadnego błędu. Gdy będziesz pewien, że wszystko jest gotowe kliknij opcję „Skopiuj artykuł do schowka” (zaraz obok opcji włączającej słownik) i wyślij go do @grumpy5 na naszym <a href="https://discord.gg/hUjMqnKsJU">serwerze Discord</a>.</p>
+<p>Jeżeli uważasz, że twój artykuł jest gotowy do dodania na stronę jeszcze raz upewnij się, że nie popełniłeś żadnego błędu. Gdy będziesz pewien, że wszystko jest gotowe kliknij opcję „Skopiuj artykuł do schowka” (zaraz obok opcji włączającej słownik) i wyślij go do @grumpy5 na naszym <a href="https://discord.gg/zGnAHs6JRv">serwerze Discord</a>.</p>
  <div id="source-code" style="display:none;">= Wstęp =
 
 Ta sekcja opisuje zalecenia co do stylu pisania artykułów, zasady panujące w edytorze i opis podstawowych oraz zaawansowanych funkcji. Przy pisaniu artykułów pomoże ci to zacząć przygodę z edytorem.
@@ -730,7 +730,7 @@ Oto najbardziej podstawowe funkcje oraz ich kod źrółowy który można znaleź
 
 = Eksportowanie artykułu =
 
-Jeżeli uważasz, że twój artykuł jest gotowy do dodania na stronę jeszcze raz upewnij się, że nie popełniłeś żadnego błędu. Gdy będziesz pewien, że wszystko jest gotowe kliknij opcję „Skopiuj artykuł do schowka” (zaraz obok opcji włączającej słownik) i wyślij go do @grumpy5 na naszym (https://discord.gg/hUjMqnKsJU)[serwerze Discord].
+Jeżeli uważasz, że twój artykuł jest gotowy do dodania na stronę jeszcze raz upewnij się, że nie popełniłeś żadnego błędu. Gdy będziesz pewien, że wszystko jest gotowe kliknij opcję „Skopiuj artykuł do schowka” (zaraz obok opcji włączającej słownik) i wyślij go do @grumpy5 na naszym (https://discord.gg/zGnAHs6JRv)[serwerze Discord].
 </div>
 </article>
 </main>
