--- a/wiki/index.html
+++ b/wiki/index.html
@@ -46,6 +46,7 @@
             <div class="categories-column"></div>
             <ul class="article-category">
                 <h1>Państwa</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/lista_państw_świata/">Lista państw świata</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/atidalia/">Atidalia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/ebengrad/">Ebengrad</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/fankladonia/">Fankladonia</a></li>
