--- a/wiki/index.html
+++ b/wiki/index.html
@@ -62,6 +62,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/lendawia_północna/">Lendawia Północna</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lendawia_południowa/">Lendawia Południowa</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/rzesza_iznotiańska/">Rzesza Iznotiańska</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/taj-hoi/">Taj-Hoi</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/teran/">Teran</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/wizgard/">Wizgard</a></li>
