--- a/wiki/iznotia/index.html
+++ b/wiki/iznotia/index.html
@@ -28,22 +28,22 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Iznotia</div><span>02.01.2025</span></header>
+<header><div>Iznotia</div><span>13.02.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Iznotiańska Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Isnotische Demokratische Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/7JpBJm1/iznotia.png" data-description="Flaga Iznotii"></td><td><img src="https://i.ibb.co/SmK1RfG/godlo-iznotii.png" data-description="Godło Iznotii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_iznotii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_iznotii/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_iznotii/"><i>Auferstanden aus Ruinen</i></a><br>(<i>Powstając z ruin</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> </td></tr></tbody></table>
+<table class="infobox"><caption>Iznotiańska Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Isnotische Demokratische Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/7JpBJm1/iznotia.png" data-description="Flaga Iznotii"></td><td style="text-align: center;"> <img src="https://i.ibb.co/SmK1RfG/godlo-iznotii.png" data-description="Herb Iznotii" width="90%"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_iznotii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_iznotii/">Herb</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_iznotii/"><i>Auferstanden aus Ruinen</i></a><br>(<i>Powstając z ruin</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> </td></tr></tbody></table>
 
 <p><b>Iznotia</b>, <b>Iznotiańska Republika Demokratyczna</b> (niem. <i>Iznotia</i>, Isnotische Demokratische Republik).</p>
  <div id="source-code" style="display:none;">{|infobox Iznotiańska Republika Demokratyczna
 !t=cc=2 ''Isnotische Demokratische Republik'' !
 |{ibox
-|[[timg:https://i.ibb.co/7JpBJm1/iznotia.png|Flaga Iznotii]] || [[timg:https://i.ibb.co/SmK1RfG/godlo-iznotii.png|Godło Iznotii]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_iznotii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_iznotii/)[Godło] |
+|t=c [[timg:https://i.ibb.co/7JpBJm1/iznotia.png|Flaga Iznotii]] ||t=c [[timg:https://i.ibb.co/SmK1RfG/godlo-iznotii.png|Herb Iznotii]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_iznotii/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_iznotii/)[Herb] |
 }|
 |t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_iznotii/)[''Auferstanden aus Ruinen'']<br>(''Powstając z ruin'') |
 |t=cc=2 <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> |
 |}
 
-'''Iznotia''', '''Iznotiańska Republika Demokratyczna''' (niem. ''Iznotia'', Isnotische Demokratische Republik).</div></div>
+'''Iznotia''', '''Iznotiańska Republika Demokratyczna''' (niem. ''Iznotia'', Isnotische Demokratische Republik).</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
