--- a/wiki/teran/index.html
+++ b/wiki/teran/index.html
@@ -28,16 +28,16 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Teran</div><span>12.10.2024</span></header>
+<header><div>Teran</div><span>13.02.2025</span></header>
 <div class="uncomplete"></div>
-<table class="infobox"><caption>Królestwo Teranu</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Kraljestvo Terana</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/fDDgkhd/teran.png" data-description="Flaga Teranu"></td><td><img src="https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png" data-description="Godło Teranu"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_teranu/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_teranu/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_teranu/"><i>Za Kralja gospod!</i></a><br>(<i>Za Króla pana!</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/mzYUEBhTN45Cn4EcF91QQjsYMAou7PJw" type="audio/mpeg"></audio> </td></tr></tbody></table>
+<table class="infobox"><caption>Królestwo Teranu</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Kraljestvo Terana</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td style="text-align: center;"> <img src="https://i.ibb.co/fDDgkhd/teran.png" data-description="Flaga Teranu"></td><td style="text-align: center;"> <img src="https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png" data-description="Herb Teranu"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_teranu/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/herb_teranu/">Herb</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_teranu/"><i>Za Kralja gospod!</i></a><br>(<i>Za Króla pana!</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/mzYUEBhTN45Cn4EcF91QQjsYMAou7PJw" type="audio/mpeg"></audio> </td></tr></tbody></table>
 
 <p><b>Teran</b>, <b>Królestwo Teranu</b> (słoweń. <i>Teran</i>, Kraljestvo Terana).</p>
  <div id="source-code" style="display:none;">{|infobox Królestwo Teranu
 !t=cc=2 ''Kraljestvo Terana'' !
 |{ibox
-|[[timg:https://i.ibb.co/fDDgkhd/teran.png|Flaga Teranu]] || [[timg:https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png|Godło Teranu]] |
-|t=c (https://grumqy.github.io/fangea/wiki/flaga_teranu/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_teranu/)[Godło] |
+|t=c [[timg:https://i.ibb.co/fDDgkhd/teran.png|Flaga Teranu]] ||t=c [[timg:https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png|Herb Teranu]] |
+|t=c (https://grumqy.github.io/fangea/wiki/flaga_teranu/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/herb_teranu/)[Herb] |
 }|
 |t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_teranu/)[''Za Kralja gospod!'']<br>(''Za Króla pana!'') |
 |t=cc=2 <audio controls=""><source src="https://audio.jukehost.co.uk/mzYUEBhTN45Cn4EcF91QQjsYMAou7PJw" type="audio/mpeg"></audio> |
